--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="hxzon.ui"/>
 	<classpathentry kind="src" path="org.hxzon.util"/>
 	<classpathentry kind="src" path="swing.custom"/>
+	<classpathentry kind="src" path="timingframework"/>
 	<classpathentry kind="src" path="other"/>
 	<classpathentry kind="src" path="swingworker"/>
 	<classpathentry excluding="test/swing/DwindlePic.java" kind="src" path="test"/>
@@ -62,6 +63,9 @@
 	<classpathentry kind="lib" path="lib/jung/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jung/vecmath-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/jung/wstx-asl-3.2.6.jar"/>
+	<classpathentry kind="lib" path="lib/jni/jna.jar"/>
+	<classpathentry kind="lib" path="lib/jni/platform.jar"/>
+	<classpathentry kind="lib" path="lib/timingframework/timingframework-swing-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/test/junit-4.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/testng-5.7-jdk15.jar"/>
 	<classpathentry kind="lib" path="lib/log/jcl-over-slf4j-1.6.1.jar"/>
@@ -74,10 +78,6 @@
 	<classpathentry kind="lib" path="lib/other/ant.jar"/>
 	<classpathentry kind="lib" path="lib/other/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/other/ognl-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/jni/jna.jar"/>
-	<classpathentry kind="lib" path="lib/jni/platform.jar"/>
-	<classpathentry kind="lib" path="lib/timingframework/promises-3.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/timingframework/timingframework-swing-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/other/commons-lang-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
