--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="hxzon.ui"/>
 	<classpathentry kind="src" path="org.hxzon.util"/>
 	<classpathentry kind="src" path="swing.custom"/>
+	<classpathentry kind="src" path="swingx"/>
 	<classpathentry kind="src" path="timingframework"/>
 	<classpathentry kind="src" path="other"/>
 	<classpathentry kind="src" path="swingworker"/>
@@ -11,6 +12,7 @@
 	<classpathentry kind="src" path="jgraph"/>
 	<classpathentry excluding="demo/" kind="src" path="jide"/>
 	<classpathentry kind="src" path="trident"/>
+	<classpathentry kind="src" path="prefuse"/>
 	<classpathentry kind="src" path="layout.spring"/>
 	<classpathentry kind="src" path="fest"/>
 	<classpathentry kind="src" path="src.calendar.toedter"/>
@@ -22,6 +24,10 @@
 	<classpathentry kind="src" path="jna"/>
 	<classpathentry kind="src" path="layout"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/swingx/swingx-core-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/jide/jide-oss-3.2.1.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/jide/jide-oss-src-3.2.1.zip"/>
+	<classpathentry kind="lib" path="lib/timingframework/timingframework-swing-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/trident/trident.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/trident/trident-sources-1.3.zip"/>
 	<classpathentry kind="lib" path="lib/12fprod/l2fprod-common-all.jar"/>
 	<classpathentry kind="lib" path="lib/festSwing/fest-swing-1.2a2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/festSwing/fest-swing-1.2a2.jar"/>
@@ -33,18 +39,15 @@
 	<classpathentry kind="lib" path="lib/flexdock/multiplayer.jar"/>
 	<classpathentry kind="lib" path="lib/flexdock/skinlf.jar"/>
 	<classpathentry kind="lib" path="lib/jgraphx/jgraphx.jar"/>
-	<classpathentry kind="lib" path="lib/jide/jide-oss-2.11.1.jar"/>
-	<classpathentry kind="lib" path="lib/trident/trident.jar"/>
-	<classpathentry kind="lib" path="lib/swingx/swingx-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-core-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-jdk6-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-resources-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-sandbox-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/pureMVC/puremvc-java-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/openSwing/clientos.jar"/>
-	<classpathentry kind="lib" path="lib/openSwing/commonos.jar"/>
+	<classpathentry kind="lib" path="lib/openSwing/clientos-2.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/openSwing/serveros-2.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/openSwing/commonos-2.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/openSwing/jnlp.jar"/>
-	<classpathentry kind="lib" path="lib/openSwing/srcserveros.jar"/>
 	<classpathentry kind="lib" path="lib/migLayout/miglayout-3.7.jar"/>
 	<classpathentry kind="lib" path="lib/jung/collections-generic-4.01.jar"/>
 	<classpathentry kind="lib" path="lib/jung/colt-1.2.0.jar"/>
@@ -65,7 +68,6 @@
 	<classpathentry kind="lib" path="lib/jung/wstx-asl-3.2.6.jar"/>
 	<classpathentry kind="lib" path="lib/jni/jna.jar"/>
 	<classpathentry kind="lib" path="lib/jni/platform.jar"/>
-	<classpathentry kind="lib" path="lib/timingframework/timingframework-swing-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/test/junit-4.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/testng-5.7-jdk15.jar"/>
 	<classpathentry kind="lib" path="lib/log/jcl-over-slf4j-1.6.1.jar"/>
@@ -79,5 +81,7 @@
 	<classpathentry kind="lib" path="lib/other/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/other/ognl-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/other/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/prefuse/prefuse-beta-20071021.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/prefuse/prefuse.src-beta-20071021.jar"/>
+	<classpathentry kind="lib" path="lib/prefuse/prefuse.src-beta-20071021.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
