--- a/.classpath
+++ b/.classpath
@@ -5,13 +5,14 @@
 	<classpathentry kind="src" path="org.hxzon.util"/>
 	<classpathentry kind="src" path="swing.custom"/>
 	<classpathentry kind="src" path="swingx"/>
+	<classpathentry excluding="demo/" kind="src" path="jide"/>
 	<classpathentry kind="src" path="timingframework"/>
+	<classpathentry kind="src" path="trident"/>
 	<classpathentry kind="src" path="other"/>
 	<classpathentry kind="src" path="swingworker"/>
 	<classpathentry excluding="test/swing/DwindlePic.java" kind="src" path="test"/>
+	<classpathentry kind="src" path="jfreechart"/>
 	<classpathentry kind="src" path="jgraph"/>
-	<classpathentry excluding="demo/" kind="src" path="jide"/>
-	<classpathentry kind="src" path="trident"/>
 	<classpathentry kind="src" path="prefuse"/>
 	<classpathentry kind="src" path="layout.spring"/>
 	<classpathentry kind="src" path="fest"/>
@@ -24,13 +25,11 @@
 	<classpathentry kind="src" path="jna"/>
 	<classpathentry kind="src" path="layout"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/swingx/swingx-core-1.6.2.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/swingx/swingx-1.6.2-sources.zip"/>
-	<classpathentry kind="lib" path="lib/jide/jide-oss-3.2.1.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/jide/jide-oss-src-3.2.1.zip"/>
+	<classpathentry kind="lib" path="lib/swingx/swingx-core-1.6.2.jar" sourcepath="lib/swingx/swingx-1.6.2-sources.zip"/>
+	<classpathentry kind="lib" path="lib/jide/jide-oss-3.2.1.jar" sourcepath="lib/jide/jide-oss-src-3.2.1.zip"/>
 	<classpathentry kind="lib" path="lib/timingframework/timingframework-swing-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/trident/trident.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/trident/trident-sources-1.3.zip"/>
+	<classpathentry kind="lib" path="lib/trident/trident.jar" sourcepath="lib/trident/trident-sources-1.3.zip"/>
 	<classpathentry kind="lib" path="lib/12fprod/l2fprod-common-all.jar"/>
-	<classpathentry kind="lib" path="lib/festSwing/fest-swing-1.2a2-sources.jar"/>
-	<classpathentry kind="lib" path="lib/festSwing/fest-swing-1.2a2.jar"/>
 	<classpathentry kind="lib" path="lib/flexdock/customizer.jar"/>
 	<classpathentry kind="lib" path="lib/flexdock/flexdock-0.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/flexdock/jmf.jar"/>
@@ -38,7 +37,13 @@
 	<classpathentry kind="lib" path="lib/flexdock/mediaplayer.jar"/>
 	<classpathentry kind="lib" path="lib/flexdock/multiplayer.jar"/>
 	<classpathentry kind="lib" path="lib/flexdock/skinlf.jar"/>
+	<!-- graph -->
+	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.16.jar" sourcepath="lib/jfreechart/jcommon-1.0.16-source.zip"/>
+	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.13.jar" sourcepath="lib/jfreechart/jfreechart-1.0.13-source.zip"/>
 	<classpathentry kind="lib" path="lib/jgraphx/jgraphx.jar"/>
+	<classpathentry kind="lib" path="lib/prefuse/prefuse-beta-20071021.jar" sourcepath="lib/prefuse/prefuse.src-beta-20071021.jar"/>
+	<classpathentry kind="lib" path="lib/prefuse/prefuse.src-beta-20071021.jar"/>
+	<!-- end graph -->
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-core-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-jdk6-1.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-resources-1.1.0.jar"/>
@@ -68,6 +73,9 @@
 	<classpathentry kind="lib" path="lib/jung/wstx-asl-3.2.6.jar"/>
 	<classpathentry kind="lib" path="lib/jni/jna.jar"/>
 	<classpathentry kind="lib" path="lib/jni/platform.jar"/>
+	<!-- test,log,other -->
+	<classpathentry kind="lib" path="lib/festSwing/fest-swing-1.2a2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/festSwing/fest-swing-1.2a2.jar"/>
 	<classpathentry kind="lib" path="lib/test/junit-4.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/test/testng-5.7-jdk15.jar"/>
 	<classpathentry kind="lib" path="lib/log/jcl-over-slf4j-1.6.1.jar"/>
@@ -81,8 +89,6 @@
 	<classpathentry kind="lib" path="lib/other/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/other/ognl-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/other/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/prefuse/prefuse-beta-20071021.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/prefuse/prefuse.src-beta-20071021.jar"/>
-	<classpathentry kind="lib" path="lib/prefuse/prefuse.src-beta-20071021.jar"/>
-	<classpathentry kind="lib" path="lib/other/bcprov-jdk16-146.jar" sourcepath="D:/WorkspacesMyEclipse/swing-ui/lib/other/bcprov-jdk16-146-src.zip"/>
+	<classpathentry kind="lib" path="lib/other/bcprov-jdk16-146.jar" sourcepath="lib/other/bcprov-jdk16-146-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
