--- a/trunk/jgraph/com/mxgraph/examples/swing/resources/editor_zh-CN.properties
+++ b/trunk/jgraph/com/mxgraph/examples/swing/resources/editor_zh-CN.properties
@@ -1,189 +1,80 @@
-shapes=Shapes
-images=Images
-symbols=Symbols
-file=File
-new=New
-openFile=Open File
-importStencil=Import Stencil
-stencilImported=Stencil imported as {1}
-allSupportedFormats=All supported formats
-imageContainsNoDiagramData=Image contains no diagram data
-save=\u4FDD\u5B58
-saveAs=Save As
-pageSetup=Page Setup
+file=\u6587\u4ef6
+new=\u65b0\u5efa
+openFile=\u6253\u5f00\u6587\u4ef6
+save=\u4fdd\u5b58
+saveAs=\u53e6\u5b58\u4e3a
 print=\u6253\u5370
-exit=Exit
-edit=Edit
-undo=\u64a4\u6d88
+edit=\u7f16\u8f91
+undo=\u53d6\u6d88\u64cd\u4f5c
 redo=\u91cd\u505a
 cut=\u526a\u5207
 copy=\u590d\u5236
 paste=\u7c98\u8d34
 delete=\u5220\u9664
-selectAll=Select All
-selectNone=Select None
-warning=Warning
-view=View
-pageLayout=Page Layout
-antialias=Antialias
-grid=Grid
-rulers=Rulers
-zoom=\u5927\u5c0f
-custom=Custom
-zoomIn=Zoom In
-zoomOut=Zoom Out
-page=Page
-width=Width
-actualSize=Actual Size
+selectAll=\u5168\u9009
+pageLayout=\u9875\u9762\u5e03\u5c40
+grid=\u683c\u5b50
+zoom=\u7f29\u653e
+custom=\u81ea\u5b9a\u4e49
+zoomIn=\u653e\u5927
+zoomOut=\u7f29\u5c0f
+width=\u5bbd
+actualSize=\u5b9e\u9645\u5c3a\u5bf8
 format=\u683c\u5f0f
-alignment=Alignment
-left=Left
-center=Center
-right=Right
-top=Top
-middle=Middle
-bottom=Bottom
-wordWrap=Word wrap
-noWordWrap=No word wrap
-fontcolor=\u5b57\u4f53\u989c\u8272
-linecolor=Linecolor
-fillcolor=\u586b\u5145\u989c\u8272
-gradient=Gradient
-label=Label
-labelFill=Label Fill
-labelBorder=Label Border
-position=Position
-shadow=Shadow
-opacity=Opacity
-textOpacity=Text opacity
-hide=Hide
-connector=Connector
-line=Line
-straight=Straight
-horizontal=Horizontal
-vertical=Vertical
-entityRelation=Entity Relation
-arrow=Arrow
-plain=Plain
-rounded=Rounded
-dashed=Dashed
-linewidth=Linewidth
-linestart=Linestart
-open=Open
-classic=Classic
-block=Block
-diamond=Diamond
-oval=Oval
-none=None
-size=Size
-lineend=Lineend
-spacing=Spacing
-sourceSpacing=Source spacing
-targetSpacing=target spacing
-perimeter=Perimeter
-global=Global
-direction=Direction
-north=North
-east=East
-south=South
-west=West
-rotateLabel=Rotate Label
-rotation=Rotation
-image=Image
-style=Style
-shape=Shape
-home=Home
-enterGroup=Enter group
-exitGroup=Exit group
-group=\u5206\u7ec4
-ungroup=\u53d6\u6d88\u5206\u7ec4
+left=\u5de6
+center=\u4e2d
+right=\u53f3
+top=\u9876
+middle=\u4e2d
+bottom=\u5e95
+label=\u6807\u7b7e
+position=\u4f4d\u7f6e
+shadow=\u9634\u5f71
+opacity=\u900f\u660e\u5ea6
+hide=\u9690\u85cf
+line=\u7ebf
+straight=\u76f4
+horizontal=\u6c34\u5e73
+vertical=\u5782\u76f4
+entityRelation=\u4f4d\u7f6e\u5173\u7cfb
+arrow=\u7bad\u5934
+plain=\u5e73
+rounded=\u5706\u865a\u7ebf
+dashed=\u865a\u7ebf
+linewidth=\u7ebf\u5bbd
+linestart=\u7ebf\u59cb\u7aef
+open=\u6253\u5f00
+classic=\u9ad8\u7ea7
+block=\u6846
+diamond=\u94bb\u77f3\u5f62
+oval=\u692d\u5706\u5f62
+none=\u65e0
+size=\u5927\u5c0f
+lineend=\u7ebf\u672b\u7aef
+spacing=\u95f4\u8ddd
+perimeter=\u5468\u957f
+global=\u5168\u7403
+direction=\u65b9\u5411
+north=\u5317
+east=\u4e1c
+south=\u5357
+west=\u897f
+rotation=\u65cb\u8f6c
+style=\u98ce\u683c
+shape=\u5f62\u72b6
+group=\u7ec4\u5408
+ungroup=\u53d6\u6d88\u7ec4\u5408
 removeFromGroup=Remove from group
-collapse=Collapse
-expand=Expand
-toBack=To Back
-toFront=To Front
+updateGroupBounds=Update group bounds
+toBack=\u8f6c\u5230\u540e\u9762
+toFront=\u8f6c\u5230\u524d\u9762
 align=\u5bf9\u9f50
-autosize=Autosize
-diagram=Diagram
-outline=Outline
-background=Background
-backgroundColor=Background Color
-backgroundImage=Background Image
-pageBackground=Page background
-layout=Layout
-verticalHierarchical=Vertical Hierarchical
-horizontalHierarchical=Horizontal Hierarchical
-verticalPartition=Vertical Partition
-horizontalPartition=Horizontal Partition
-verticalStack=Vertical Stack
-horizontalStack=Horizontal Stack
-verticalTree=Vertical Tree
-horizontalTree=Horizontal Tree
-parallelEdges=Parallel Edges
-placeEdgeLabels=Edge Labels
-organicLayout=Organic
-circleLayout=Circle
-selection=Selection
-selectPath=Select Path
-selectDirectedPath=Select Directed Path
-selectTree=Select Tree
-selectDirectedTree=Select Directed Tree
-stylesheet=Stylesheet
-basicStyle=Basic Style
-defaultStyle=Default Style
-options=Options
-display=Display
-buffering=Buffering
-dirty=Dirty
-centerPage=Center Page
-centerZoom=Center Zoom
-zoomToSelection=Zoom to Selection
-preferPageSize=Prefer Pagesize
-pageBreaks=Page Breaks
-tolerance=Tolerance
-gridSize=Grid Size
-gridColor=Grid Color
-dot=Dot
-line=Line
-cross=Cross
-dragAndDrop=Drag and Drop
-dragEnabled=Drag Enabled
-dropEnabled=Drop Enabled
-imagePreview=Image Preview
-labels=Labels
-htmlLabels=HTML Labels
-showLabels=Show Labels
-moveEdgeLabels=Move Edge Labels
-moveVertexLabels=Move Vertex Labels
-handleReturn=Handle Return
-connections=Connections
-connectable=Connectable
-connectableEdges=Connectable Edges
-createTarget=Create Target
-connectMode=Connect Mode
-validation=Validation
-allowDanglingEdges=Allow Dangling Edges
-cloneInvalidEdges=Clone Invalid Edges
-allowLoops=Allow Loops
-multigraph=Multigraph
-disconnectOnMove=Disconnect on Move
-window=Window
-help=Help
-aboutGraphEditor=About mxGraph Editor
-magnifyPage=Magnify Page
-selectVertices=Select Vertices
-selectEdges=Select Edges
-newDiagram=New Diagram
-ready=Ready.
-scale=Scale
-value=Value
-file=File
-allImages=All Images
-overwriteExistingFile=Overwrite existing file?
-transparentBackground=Transparent Background?
-noImageData=No Image Data
-noSourceAndTargetSelected=No source and target selected.
-enterWarningMessage=Enter warning message
-noCellSelected=No cell selected.
-loseChanges=Lose Changes?
-noLayout=This layout is not available in the open source- and demo-version.
+autosize=\u81ea\u52a8\u8c03\u6574\u5927\u5c0f
+outline=\u6982\u51b5
+background=\u80cc\u666f
+line=\u7ebf
+help=\u5e2e\u52a9
+selectVertices=\u9009\u62e9\u9876\u70b9
+selectEdges=\u9009\u62e9\u8fb9
+file=\u6587\u4ef6
+error=\u9519\u8bef
