--- a/.classpath
+++ b/.classpath
@@ -38,7 +38,7 @@
 	<classpathentry kind="lib" path="lib/flexdock/skinlf.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jcommon-1.0.16.jar" sourcepath="lib/jfreechart/jcommon-1.0.16-source.zip"/>
 	<classpathentry kind="lib" path="lib/jfreechart/jfreechart-1.0.13.jar" sourcepath="lib/jfreechart/jfreechart-1.0.13-source.zip"/>
-	<classpathentry kind="lib" path="lib/jgraphx/jgraphx.jar"/>
+	<classpathentry kind="lib" path="lib/jgraphx/jgraphx-1.7.1.7.jar" sourcepath="lib/jgraphx/jgraphx-1.7.1.7-src.zip"/>
 	<classpathentry kind="lib" path="lib/prefuse/prefuse-beta-20071021.jar" sourcepath="lib/prefuse/prefuse.src-beta-20071021.jar"/>
 	<classpathentry kind="lib" path="lib/prefuse/prefuse.src-beta-20071021.jar"/>
 	<classpathentry kind="lib" path="lib/springRichclient/spring-richclient-core-1.1.0.jar"/>
